Version History
===============
Version 0.7.13 (unreleased)
---------------------------
* Search in comments, too (PR #174, thanks @torchingloom)


Version 0.7.12
--------------
* Fix IndexError in fix_nls when translation is just a carriage return (PR #168, thanks @nealtodd)
* Remove float formatting of integer percent translated (PR #171, thanks @nealtodd)
* Fixed a comment (PR #170, thanks @dnaranjo89)
* Test against Django 1.10
* Dropped support for goslate and the Google translate API


Version 0.7.11
--------------
* Make MO file compilation optional (PR #166, Issue #155, thanks @nealtodd)
* Fix an invalid page get parameter by falling back to page 1 (PR #165, thanks @nealtodd)
* Adds reference language selector (PR #60, thanks @hsoft)

Version 0.7.10
--------------
* Re-released 0.7.9 to include a missing image (Issue #162, thanks @legios89)

Version 0.7.9
-------------
* Use language code without country specification for Yandex dest lang (PR #152, thanks @nealtodd)
* Support discovering locale directories like zh_Hans(xx_Xxxx) (Fixes #133 via PR #153 and #133, thanks @glasslion and @dohsimpson)
* Ship Django's original search icon as a static asset (Fixes #157, thanks @facconi)
* Added a warning about translation via the Google Translate service being deprecated in the next version


Version 0.7.8
-------------
* Adds missing includes in MANIFEST.in
* Support for running tests via setuptools
* Updated microsofttranslator dependency version

Version 0.7.7
-------------
* Supported Django versions are now 1.7, 1.8 and 1.9
* Added proper documentation
* Fixed typo in documentation (PR #130, thanks @dfrdmn)
* Fixes the Fuzzy toggle link by adding an actual toggle checkbox (Issue #132, thanks @EmilStenstrom)
* Better handling of Custom User Models while checking wether the current User is authorized to translate (Issue #131, thanks @EmilStenstrom)