@@ -113,3 +113,4 @@ SECRET_KEY = 'empty'
 
 ROSETTA_ENABLE_REFLANG = True
 ROSETTA_ENABLE_TRANSLATION_SUGGESTIONS = True
+ROSETTA_SHOW_AT_ADMIN_PANEL = True
